@@ -27,6 +27,7 @@ import java.util.Hashtable;
 
 import nz.net.kallisti.emusicj.download.IDisplayableDownloadMonitor;
 import nz.net.kallisti.emusicj.download.IDownloadMonitor;
+import nz.net.kallisti.emusicj.view.SWTUtils;
 
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.SWTException;
@@ -40,28 +41,32 @@ import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Label;
 
 /**
- * <p>This class displays information about a file (as represented by an
+ * <p>
+ * This class displays information about a file (as represented by an
  * IDownloader instance). Once it is in place, a call to {@link setDownloader}
  * defines what to display. It keeps an image cache for album covers.
  * 
  * $Id$
- *
+ * 
  * @author robin
  */
 public class FileInfoPanel extends Composite implements DisposeListener {
-	
-	//private ScrolledComposite displayArea;
-	private Composite imageArea;
-	private Composite textArea;
-	private Label imageLabel;
-	private Display display;
-	private Hashtable<File, Image> imageCache;
-	private ArrayList<Label> labels = new ArrayList<Label>();
-	
+
+	// private ScrolledComposite displayArea;
+	private final Composite imageArea;
+	private final Composite textArea;
+	private final Label imageLabel;
+	private final Display display;
+	private final Hashtable<File, Image> imageCache;
+	private final ArrayList<Label> labels = new ArrayList<Label>();
+
 	/**
 	 * Creates an instance of FileInfoPanel with the provided parent and style.
-	 * @param parent the parent of this widget
-	 * @param style the style.
+	 * 
+	 * @param parent
+	 *            the parent of this widget
+	 * @param style
+	 *            the style.
 	 */
 	public FileInfoPanel(Composite parent, int style, Display display) {
 		super(parent, style);
@@ -70,44 +75,42 @@ public class FileInfoPanel extends Composite implements DisposeListener {
 		this.display = display;
 		this.setLayout(new GridLayout(2, false));
 		imageArea = new Composite(this, SWT.NONE);
-		imageArea.setLayoutData(new GridData(SWT.LEFT, SWT.FILL, 
-				false, true));
+		imageArea.setLayoutData(new GridData(SWT.LEFT, SWT.FILL, false, true));
 		imageArea.setLayout(new GridLayout(1, false));
 		imageLabel = new Label(imageArea, SWT.NONE);
 		textArea = new Composite(this, SWT.NONE);
-		textArea.setLayoutData(new GridData(SWT.FILL, SWT.FILL, 
-				true, true));
+		textArea.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 		textArea.setLayout(new GridLayout(2, false));
 		imageArea.layout();
 		textArea.layout();
 		layout();
 		pack();
 	}
-	
+
 	public void setDownloader(IDownloadMonitor dl) {
 		// Dispose all the labels being displayed at the moment...
 		for (Label l : labels) {
 			l.dispose();
 		}
-        imageLabel.setImage(null);
+		imageLabel.setImage(null);
 		labels.clear();
 		if (dl instanceof IDisplayableDownloadMonitor) {
-			IDisplayableDownloadMonitor ddl = (IDisplayableDownloadMonitor)dl;
+			IDisplayableDownloadMonitor ddl = (IDisplayableDownloadMonitor) dl;
 			String[][] textToDisplay = ddl.getText();
 			File coverFile = ddl.getImageFile();
 			if (coverFile != null && !coverFile.toString().equals("")
 					&& coverFile.exists()) {
-				Image im = imageCache.get(coverFile); 
+				Image im = imageCache.get(coverFile);
 				if (im == null) {
 					try {
 						im = new Image(display, ddl.getImageFile().toString());
 						imageCache.put(coverFile, im);
 					} catch (SWTException e) {
-						// Sometimes an error here can cause the whole system 
+						// Sometimes an error here can cause the whole system
 						// to fall over, so we catch it and fail more
 						// gracefully
-						System.err.println("An error occurred loading the " +
-								"image: "+ddl.getImageFile().toString());
+						System.err.println("An error occurred loading the "
+								+ "image: " + ddl.getImageFile().toString());
 						e.printStackTrace();
 						im = null;
 					}
@@ -117,14 +120,16 @@ public class FileInfoPanel extends Composite implements DisposeListener {
 				imageLabel.setImage(null);
 			}
 			// create the labels
-			for (int i=0; i<textToDisplay.length; i++) {
+			for (int i = 0; i < textToDisplay.length; i++) {
 				if (textToDisplay[i][0] != null) {
 					Label l = new Label(textArea, SWT.NONE);
-					l.setText(textToDisplay[i][0]+":");
+					String text = SWTUtils.deMonic(textToDisplay[i][0]);
+					l.setText(text + ":");
 					labels.add(l);
 					l = new Label(textArea, SWT.NONE);
-					l.setText(textToDisplay[i][1]);
-					labels.add(l);            		
+					text = SWTUtils.deMonic(textToDisplay[i][1]);
+					l.setText(text);
+					labels.add(l);
 				}
 			}
 		}
@@ -133,7 +138,7 @@ public class FileInfoPanel extends Composite implements DisposeListener {
 		textArea.layout();
 		pack();
 	}
-	
+
 	public void widgetDisposed(DisposeEvent e) {
 		for (Image im : imageCache.values()) {
 			im.dispose();
@@ -143,7 +148,5 @@ public class FileInfoPanel extends Composite implements DisposeListener {
 		}
 		labels.clear();
 	}
-	
-	
-	
+
 }
